--- a/app/search/templates/dashboard_search.html
+++ b/app/search/templates/dashboard_search.html
@@ -2,7 +2,7 @@
 {% block title %}Consensus spectra ForeST{% endblock %}
 {% block content %}
 <form method="POST" action=""  enctype="multipart/form-data" novalidate>
-    <p>This is the consensus spectrum for {{species}}put the mouse in the peaks to get information about each peak, you can use the tools on the right side of the spectrum to explore or zoom it. 
+    <p>This is the consensus spectrum for {{species}}, put the mouse in the peaks to get information about each peak, you can use the tools on the right side of the spectrum to explore or zoom it. 
     <div>
         {{form.submit()}}<br>
     </div>
