--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -60,7 +60,7 @@
                   ForeST Consult
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item nav-link" href={{url_for("search.specie_search")}}>Search by specie</a>
+                  <a class="dropdown-item nav-link" href={{url_for("search.specie_search")}}>Search by species</a>
                   <a class="dropdown-item nav-link" href={{url_for("search.wd_search")}}>Search by WD number</a>
                   <a class="dropdown-item nav-link" href={{url_for("search.wd_all")}}>All WD</a>
                   <a class="dropdown-item nav-link" href={{url_for("search.species_all")}}>All species</a>
