--- a/app/db_manager/templates/consensus_update.html
+++ b/app/db_manager/templates/consensus_update.html
@@ -2,7 +2,7 @@
 {% block title %}ForeST consensus calculation{% endblock %}
 {% block content %}
 
-<p>This button performs the calculation of consensus spectra in the MySQL Database, it takes a while to calculate so please to not close the page until you see the succesfully calculated message.</p>
+<p>This button performs the calculation of consensus spectrum in the MySQL Database, it takes a while to calculate so please to not close the page until you see the succesfully calculated message.</p>
 <p>
 	{% with messages = get_flashed_messages() %}
 	  {% if messages %}
